<resources>
    <string name="app_name">Bakalab</string>
    <string name="action_settings">Nastavení</string>
    <string name="action_login">Přihlásit</string>
    <string name="hint_bakaweb">Adresa bakalářů</string>
    <string name="hint_username">Jméno</string>
    <string name="hint_password">Heslo</string>
    <string name="error_user_not_found">Uživatel nenalezen</string>
    <string name="error_password_incorrect">Špatné heslo</string>
    <string name="error_unknown">Došlo k neznámé chybě.</string>
    <string name="login_token_success">Token se podařilo vypočítat. Ověřuji přihlašování</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_item_ukoly">Úkoly</string>
    <string name="nav_item_rozvrh">Rozvrh</string>
    <string name="nav_item_znamky">Známky</string>
    <string name="nav_item_akce">Plán akcí</string>
    <string name="nav_item_suplovani">Suplování</string>
    <string name="nav_item_komens">Komens</string>
    <string name="nav_item_komens_received">Přijaté</string>
    <string name="nav_item_komens_sent">Odeslané</string>
    <string name="nav_item_vyuka">Výuka</string>
    <string name="nav_item_absence">Absence</string>
    <string name="nav_item_pololetni">Pololetí</string>
    <string name="nav_item_predmety">Předměty</string>
    <string name="tab_ukoly_1">Aktivní</string>
    <string name="tab_ukoly_2">Ukončené</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <!--<string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>-->

    <!-- Úkoly settings -->
    <string name="pref_header_ukoly">Úkoly</string>

    <string name="pref_title_ukoly_check_late">Označit pozdní úkoly jako splněné</string>
    <string name="sign_in">Přihlašte se</string>
    <string name="sign_in_text">do školního systému Bakaláři.</string>
</resources>
